# CounterFit

./: LICENSE  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
counterfit-app/: .pylintrc  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
counterfit-app/src/: __main__.py
counterfit-app/src/CounterFit/: __init__.py  __main__.py  actuators.py  binary_sensors.py  counterfit.py  i2c_sensors.py  sensors.py  serial_sensors.py
counterfit-app/src/CounterFit/static/: style.css
counterfit-app/src/CounterFit/templates/: binary_sensor_create_settings.html  boolean_sensor.html  camera_sensor.html  float_sensor.html  gps_sensor.html  home.html  i2c_integer_sensor.html  i2c_sensor_create_settings.html  integer_sensor.html  led_actuator.html  pin_sensor_create_settings.html  relay_actuator.html  serial_sensor_create_settings.html
counterfit-app/src/tests/: route.gpx  test_serial_sensors.py
images/: Artwork.sketch
samples/grove/button-temperature-sensor-controlled-relay/: README.md  main.py  requirements.txt
samples/grove/light-sensor-controlled-led/: README.md  app.py
shims/CounterFitConnection/: .gitignore  .pylintrc  README.md  counterfit_connection.py  requirements.txt  setup.py
shims/CounterFitConnection/tests/: test_counterfit_connection.py
shims/SeeedStudios/grove_py/: .pylintrc  (+3 more)
shims/grove/: README.md  build.sh  setup.py
shims/picamera/: .gitignore  README.md  requirements.txt  setup.py
shims/pyserial/: counterfit_shims_serial.py  setup.py
shims/rpi_vl53l0x/: README.md  requirements.txt  setup.py
(+31 files in other folders)
