[metadata]
name = CounterFit
version = attr: CounterFit.__version__
url = https://github.com/CounterFit-IoT/CounterFit
project_urls =
    Documentation = https://github.com/CounterFit-IoT/CounterFit
    Source Code = https://github.com/CounterFit-IoT/CounterFit
    Issue Tracker = https://github.com/CounterFit-IoT/CounterFit/issues
    Twitter = https://twitter.com/JimBobBennett
license = MIT
author = Jim Bennett
maintainer = Jim Bennett
description = A virtual IoT hardware simulator.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
        Development Status :: 2 - Pre-Alpha
        Intended Audience :: Developers
        Topic :: System :: Hardware
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    counterfit = CounterFit.counterfit:main

[tool:pytest]
testpaths =
    src/tests